--- a/app/components/child/template.hbs
+++ b/app/components/child/template.hbs
@@ -1,5 +1,3 @@
-<Parent as |data|>
-  <button {{action data.person.changeIdentity 'Bart' 'Simpson'}}>
-    Change Identity
-  </button>
-</Parent>
+<button {{action @person.changeIdentity 'Bart' 'Simpson'}}>
+  Change Identity
+</button>
