Add granchild component

--- a/app/components/child/template.hbs
+++ b/app/components/child/template.hbs
@@ -1,3 +1,1 @@
-<button {{action @person.changeIdentity 'Bart' 'Simpson'}}>
-  Change Identity
-</button>
+{{component 'grandchild' person=@person}}
