--- a/app/components/grandchild/template.hbs
+++ b/app/components/grandchild/template.hbs
@@ -1,3 +1,7 @@
 <button {{action @person.changeIdentity 'Bart' 'Simpson'}}>
   Change Identity
 </button>
+
+<button {{action @person.category.set infantType}}>
+  New Baby
+</button>
