--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,4 +3,5 @@
 
   <div>First name: {{data.person.firstName.state}}</div>
   <div>Last name: {{data.person.lastName.state}}</div>
+  <div>Full Name: {{data.person.fullName}}</div>
 </Parent>
