Use `state` helper to reproduce bug

--- a/app/components/parent/template.hbs
+++ b/app/components/parent/template.hbs
@@ -1,5 +1,7 @@
-<button {{action person.changeIdentity 'Bart' 'Simpson'}}>
-  Change Identity
-</button>
+{{#let (state (type 'infant')) as |person|}}
+  <button {{action person.changeIdentity 'Bart' 'Simpson'}}>
+    Change Identity
+  </button>
 
-{{yield (hash person=person)}}
+  {{yield (hash person=person)}}
+{{/let}}
